# Tinyrenderer

./: .gitignore  CMakeLists.txt  Readme.md
AntiAliasing/: AntiAliasing.cpp
Assignment1/: CMakeLists.txt  geometry.h  main.cpp  model.cpp  model.h
Assignment2/: CMakeLists.txt  main.cpp
Assignment3/: CMakeLists.txt  main.cpp
Assignment4/: CMakeLists.txt  main.cpp
BMP/: bmpimage.h
Base/: Image.cpp  Image.h  Log.h  Triangle.cpp  Triangle.h  Vec.h  bmpimage.cpp  geometry.h  model.cpp  model.h  rasterizer.cpp  rasterizer.h  tgaimage.cpp  tgaimage.h
Base/AntiAliasing/: AntiAliasing.cpp  AntiAliasing.h
Base/PNG/: pngimage.h
Base/Test/: DepthTest.h  Test.h
Base/Texture/: Texture.h
PNG/: pngimage.cpp
TGA/: tgaimage.cpp  tgaimage.h
src/: CMakeLists.txt  Image.cpp  Image.h  Log.h  Log.hpp  OBJ_Loader.cpp  OBJ_Loader.h  OrbitCamera.h  OrbitCamera.hpp  Triangle.cpp  Triangle.h  Vec.h  main.cpp  rasterizer.cpp  rasterizer.h
src/ObjLoader/: OBJ_Loader.cpp  OBJ_Loader.h
src/Scene/: Materials.h  Materials.hpp  Object.h  Object.hpp  Scene.h  Scene.hpp
src/Shader/: Shader.cpp  Shader.h
src/Texture/: Texture.cpp  Texture.h
src/ThreadPool/: threadpool.hpp
